--- a/02-Homework/Develop/assets/css/style.css
+++ b/02-Homework/Develop/assets/css/style.css
@@ -8,7 +8,7 @@ body {
     background-color: #d9dcd6;
 }
 
-/* All element styling codes were switched from class to element */
+/* All header styling code was switched from class to element */
 header {
     padding: 20px;
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
@@ -122,7 +122,7 @@ h3 {
     max-height: 200px;
 }
 
-/* I convered all three h2's into one css section since they shared the same format */
+/* I converged all three h2's into one css section since they shared the same format */
 .content h2 {
     margin-bottom: 20px;
     font-size: 36px;
